refactor: new beginning
